# gs-cybersecu

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default_config.yaml
src/gscs/: __init__.py  main.py
src/gscs/commands/: add.py  deps.py  export_import.py  gui.py  history.py  run.py  search.py  template.py
src/gscs/core/: config.py  database.py  models.py
src/gscs/services/: dep_checker.py  exporter.py  logger.py  registry.py  runner.py  sandbox.py  search_engine.py  template_manager.py
src/gscs/ui/: console.py  gui_app.py  tables.py
src/gscs/utils/: hash.py  validators.py
tests/: conftest.py  test_config.py  test_dep_checker.py  test_registry.py  test_search.py
